--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -582,7 +582,7 @@ jobs:
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
-          url: ${{ secrets.GENURL }}/updategh
+          url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "Success"}'
@@ -591,7 +591,7 @@ jobs:
         if: failure()
         uses: fjogeleit/http-request-action@v1
         with:
-          url: ${{ secrets.GENURL }}/updategh
+          url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "Generation failed, try again"}'
@@ -600,7 +600,7 @@ jobs:
         if: cancelled()
         uses: fjogeleit/http-request-action@v1
         with:
-          url: ${{ secrets.GENURL }}/updategh
+          url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "Generation cancelled, try again"}'
