--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -88,6 +88,9 @@ env:
 
 
 jobs:
+  generate-bridge:
+    uses: ./.github/workflows/bridge.yml
+    
   build-RustDeskTempTopMostWindow:
     uses: ./.github/workflows/third-party-RustDeskTempTopMostWindow.yml
     with:
