fix windows generator

--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -90,7 +90,9 @@ env:
 jobs:
   generate-bridge:
     uses: ./.github/workflows/bridge.yml
-    
+    with:
+      version: ${{ fromJson(inputs.extras).version }}
+      
   build-RustDeskTempTopMostWindow:
     uses: ./.github/workflows/third-party-RustDeskTempTopMostWindow.yml
     with:
